# aifitbot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: gitcommit-agent.md  quality-engineer.md  tester.md
.claude/skills/comments-check/: SKILL.md
.claude/skills/git-save/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/unit-test/: SKILL.md
.githooks/: pre-commit
data/: actions.md  body_build_nutrition.md  fitness_guide.md  nutrition.md  principles.md  stretch_training.md
scripts/: eval_generation.py  eval_generation_results.json  eval_rag.py  eval_ragas.py  eval_results.json
src/: app.py  bot.py  cli.py  config.py  database.py  main.py  rag.py  tools.py
src/middleware/: auth_middleware.py
src/models/: __init__.py  document.py  message.py  session.py  user.py  workout.py
src/repositories/: document_repo.py  message_repo.py  session_repo.py  user_repo.py  vector_repo.py  workout_repo.py
src/routes/: auth_routes.py  chat_routes.py  kb_routes.py  workout_routes.py
src/services/: auth_service.py  kb_service.py  rag_service.py  workout_service.py
src/static/css/: style.css
src/templates/: _chat_empty.html  _chat_messages.html  _doc_list.html  _session_list.html  _workout_list.html  admin_dashboard.html  admin_kb.html  base.html  change_password.html  chat.html  exercises.html  home.html  login.html  profile.html  register.html  workout.html
src/utils/: logger.py
tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_kb_service.py  test_models.py  test_repositories.py
tests/loadtest/: locustfile.py  prepare_data.py  results_failures.csv  results_stats.csv  results_stats_history.csv  test_data.json
