[project]
name = "aifitbot"
version = "0.1.0"
description = "AI 私人健身教练，支持多模型与对话记忆"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.10",
    "langchain-openai>=0.3.5",
    "langchain-deepseek>=0.1.2",
    "langchain-community>=0.3.0",          # 新增：文档加载等
    "langchain-text-splitters>=0.3.0",     # 新增：文本切分
    "langchain-chroma>=0.1.0",             # 新增：Chroma 集成
    "chromadb>=0.5.0",                     # 新增：向量数据库
    "sentence-transformers>=3.0.0",        # 新增：本地嵌入模型
    "langchain-huggingface>=0.1.0",        # 新增：HF 嵌入接口
    "pypdf>=4.0.0",                        # 新增：PDF 支持（可选）
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = []

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
