[project]
name = "aifitbot"
version = "0.1.0"
description = "AI 私人健身教练，支持多模型与对话记忆"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangChain 生态
    "langchain>=0.3.10",
    "langchain-openai>=0.3.5",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # 数据库
    "sqlmodel>=0.0.22",
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<4.1.0",
    # 工具
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = []

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
